# ox-bart

./: .gitignore  LICENSE  README.md  bin  build.sh  build_ox_2.0_from_scratch.sh  docker_build.sh  genctags  lib
ox2.0/: docker_build_helper.sh  yum.conf
ox2.0/bart/: Makefile  Makefile.local
ox2.0/bart/src/num/: fft.c
src/: CMakeLists.txt
src/BartIO/: BartIO.cpp  BartIO.h  CMakeLists.txt
src/BartToDicom/: BartToDicom.cpp  CMakeLists.txt  CommandLine.cpp  CommandLine.h  Driver.cpp  Driver.h
src/CalibrationData/: CMakeLists.txt  CalibrationData.cpp  CommandLine.cpp  CommandLine.h  Driver.cpp  Driver.h
src/NoiseCov/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  Driver.cpp  Driver.h  NoiseCov.cpp
src/PfileToBart/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  Driver.cpp  Driver.h  PfileToBart.cpp
src/ScanArchiveToBart/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  Driver.cpp  Driver.h  ScanArchiveToBart.cpp
